Fix Java 8 compatibility
Signed-off-by: yuxiqian <34335406+yuxiqian@users.noreply.github.com>